# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
.github/workflows/: audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20240908180915_create_subscriptions_table.sql  20240928164052_make_status_not_null_in_subscriptions.sql  20240928165600_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
test/: health_check.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
