[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Talal <talal.sh167@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
rand = {version = "0.8.5", features = ["std_rng"]}
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = {version = "1.10.0", features = ["v4"]}
chrono = {version = "0.4.38", default-features = false, features = ["clock"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.12"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
validator = "0.18.1"
thiserror = "1.0.64"
anyhow = "1.0.89"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1.20.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.128"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.2"
